<?xml version="1.0"?>
<package format="2">
  <name>blender_gazebo</name>
  <version>0.0.2</version>
  <description>The blender_gazebo package</description>

  <maintainer email="david_0429@hotmail.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospkg</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
  </export>
</package>
